crates/fin_parser/src/snapshots/fin_parser__tests__insta@expr_closure_no_args.fin.snap
---
source: crates/fin_parser/src/lib.rs
expression: tree
input_file: crates/fin_parser/src/snapshots/validation/expr_closure_no_args.fin
---
File@0..7
  ItemExpr@0..7
    ExprClosure@0..7
      Pipe@0..1 "|"
      ArgList@1..1
        Arg@1..1
      Pipe@1..2 "|"
      Whitespace@2..3 " "
      ExprIdent@3..7
        Ident@3..7 "body"
