crates/fin_parser/src/snapshots/fin_parser__tests__insta@expr_closure_with_const_arg.fin.snap
---
source: crates/fin_parser/src/lib.rs
expression: tree
input_file: crates/fin_parser/src/snapshots/validation/expr_closure_with_const_arg.fin
---
File@0..20
  ItemExpr@0..20
    ExprClosure@0..20
      Pipe@0..1 "|"
      ArgList@1..14
        Arg@1..14
          ConstKw@1..6 "const"
          Whitespace@6..7 " "
          ExprIdent@7..8
            Ident@7..8 "T"
          Colon@8..9 ":"
          Whitespace@9..10 " "
          ExprIdent@10..14
            Ident@10..14 "Type"
      Pipe@14..15 "|"
      Whitespace@15..16 " "
      ExprIdent@16..20
        Ident@16..20 "body"
