crates/fin_parser/src/snapshots/fin_parser__tests__insta@expr_closure_with_self.fin.snap
---
source: crates/fin_parser/src/lib.rs
expression: tree
input_file: crates/fin_parser/src/snapshots/validation/expr_closure_with_self.fin
---
File@0..11
  ItemExpr@0..11
    ExprClosure@0..11
      Pipe@0..1 "|"
      ArgList@1..5
        Arg@1..5
          ExprIdent@1..5
            Ident@1..5 "self"
      Pipe@5..6 "|"
      Whitespace@6..7 " "
      ExprIdent@7..11
        Ident@7..11 "body"
