crates/fin_parser/src/snapshots/fin_parser__tests__insta@expr_enum.fin.snap
---
source: crates/fin_parser/src/lib.rs
expression: tree
input_file: crates/fin_parser/src/snapshots/validation/expr_enum.fin
---
File@0..25
  ItemExpr@0..25
    ExprEnum@0..25
      EnumKw@0..4 "enum"
      Whitespace@4..5 " "
      BraceOpen@5..6 "{"
      Whitespace@6..11 "\n    "
      ExprIdent@11..14
        Ident@11..14 "Foo"
      Comma@14..15 ","
      Whitespace@15..20 "\n    "
      ExprIdent@20..24
        Ident@20..23 "Bar"
        Whitespace@23..24 "\n"
      BraceClose@24..25 "}"
