crates/fin_parser/src/snapshots/fin_parser__tests__insta@expr_enum_empty.fin.snap
---
source: crates/fin_parser/src/lib.rs
expression: tree
input_file: crates/fin_parser/src/snapshots/validation/expr_enum_empty.fin
---
File@0..7
  ItemExpr@0..7
    ExprEnum@0..7
      EnumKw@0..4 "enum"
      Whitespace@4..5 " "
      BraceOpen@5..6 "{"
      BraceClose@6..7 "}"
