crates/fin_parser/src/snapshots/fin_parser__tests__insta@expr_enum_with_arg_variant.fin.snap
---
source: crates/fin_parser/src/lib.rs
expression: tree
input_file: crates/fin_parser/src/snapshots/validation/expr_enum_with_arg_variant.fin
---
File@0..30
  ItemExpr@0..30
    ExprEnum@0..30
      EnumKw@0..4 "enum"
      Whitespace@4..5 " "
      BraceOpen@5..6 "{"
      Whitespace@6..11 "\n    "
      ExprIdent@11..15
        Ident@11..15 "None"
      Comma@15..16 ","
      Whitespace@16..21 "\n    "
      ExprCall@21..29
        ExprIdent@21..25
          Ident@21..25 "Some"
        ParenOpen@25..26 "("
        CallArgs@26..27
          ExprIdent@26..27
            Ident@26..27 "T"
        ParenClose@27..28 ")"
        Whitespace@28..29 "\n"
      BraceClose@29..30 "}"
